feat: item window
- Started item window
- Refactored GW2 Item Library to only import items when needed
- Redesigned title bar to not have ghost space

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,7 +10,7 @@ body,
 
 .global {
   &__wrapper {
-    width: calc(100% - 50px);
-    margin: 0 0 0 50px;
+    width: calc(100%);
+    margin: 0;
   }
 }
